refactor add require confirmation code usecase tests

--- a/Core.Common/Core.Common.csproj
+++ b/Core.Common/Core.Common.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NDice.Randomizers.Troschuetz" Version="0.9.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain.Repository\Domain.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
