--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MyFirstFinance;Trusted_Connection=True;"
+    "DefaultConnection": "data source=localhost; initial catalog=MyFirstFinance; Integrated security=True; TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
